put on one line

--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -373,9 +373,7 @@
     "\n",
     "$$\\frac{ \\sigma_{\\mathcal{O}} }{ \\sqrt{N} },$$\n",
     "\n",
-    "where $\\sigma_{\\mathcal{O}}$ is the standard deviation of `O_twirls` and $N$ is the number of twirls.\n",
-    "\n",
-    " When you do not enable twirling, `stds` and `ensemble_standard_error` are equal.\n",
+    "where $\\sigma_{\\mathcal{O}}$ is the standard deviation of `O_twirls` and $N$ is the number of twirls. When you do not enable twirling, `stds` and `ensemble_standard_error` are equal.\n",
     "\n",
     "If you enable ZNE, then the `stds` described above become weights in a non-linear regression to an extrapolator model. What finally gets returned in the `stds` in this case is the uncertainty of the fit model evaluated at a noise factor of zero. When there is a poor fit, or large uncertainty in the fit, the reported `stds` can become very large. When ZNE is enabled, `pub_result.data.evs_noise_factors` and `pub_result.data.stds_noise_factors` is also populated, so that you can do your own extrapolation."
    ]
