--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -367,11 +367,11 @@
     "\n",
     "Consider a single observable $\\mathcal{O}$. In the absence of [ZNE](/guides/error-mitigation-and-suppression-techniques#zero-noise-extrapolation-zne), you can think of each shot of the Estimator execution as providing a point estimate of the expectation value $\\langle \\mathcal{O} \\rangle$. If the pointwise estimates are in a vector `Os`, then the value returned in `ensemble_standard_error` is equivalent to the following (in which $\\sigma_{\\mathcal{O}}$ is the standard deviation of the expectation value estimate and $N$ is the number of shots):\n",
     "\n",
-    "$$\\frac{ \\sigma_{\\mathcal{O}} }{ \\sqrt{N} },$$\n",
+    "$$\\frac{ \\sigma_{\\mathcal{O}} }{ \\sqrt{N_{shots}} },$$\n",
     "\n",
     "which treats all shots as part of a single ensemble. If you requested gate [twirling](/guides/error-mitigation-and-suppression-techniques#pauli-twirling) (`twirling.enable_gates = True`), you can sort the pointwise estimates of $\\langle \\mathcal{O} \\rangle$ into sets that share a common twirl. Call these sets of estimates `O_twirls`, and there are `num_randomizations` (number of twirls) of them. Then `stds` is the standard error of the mean of `O_twirls`, as in\n",
     "\n",
-    "$$\\frac{ \\sigma_{\\mathcal{O}} }{ \\sqrt{N} },$$\n",
+    "$$\\frac{ \\sigma_{\\mathcal{O}} }{ \\sqrt{N_{twirls}} },$$\n",
     "\n",
     "where $\\sigma_{\\mathcal{O}}$ is the standard deviation of `O_twirls` and $N$ is the number of twirls. When you do not enable twirling, `stds` and `ensemble_standard_error` are equal.\n",
     "\n",
