add link and code font

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -132,11 +132,11 @@ To get started, explore the [Qiskit Functions documentation](./functions).
 
 {/* Bring over the Quantum news (blog) announcement post */}
 
-We recently made Qiskit Code Assistant available as a preview release for IBM Quantum Premium Plan users. In our latest post on the IBM Quantum blog, we take a look at the inner workings of the granite-8b-qiskit model behind this powerful new quantum code generation tool, and the unique challenges that went into building it.
+We recently made Qiskit Code Assistant [available as a preview release](/announcements/product-updates/2024-09-16-code-assistant) for IBM Quantum Premium Plan users. In our latest post on the IBM Quantum blog, we take a look at the inner workings of the `granite-8b-qiskit` model behind this powerful new quantum code generation tool, and the unique challenges that went into building it.
 
 The blog opens with a high-level overview of our motivations for building Qiskit Code Assistant, long-term plans for open-sourcing the code assistant model, and instructions for getting started with Qiskit Code Assistant in popular coding environments VS Code and JupyterLab. A more detailed version of these instructions can be found in the [documentation](/guides/qiskit-code-assistant).
 
-From there, the blog goes on to deliver popular summaries of two recent arXiv papers detailing our work developing the granite-8b-qiskit model, and the Qiskit HumanEval benchmarking method we use to evaluate the performance of quantum code generation tools. Interested readers can [explore the blog](https://www.ibm.com/quantum/blog/qiskit-code-assistant), and those looking for more technical detail can find the aforementioned arXiv papers [here](https://arxiv.org/abs/2405.19495/) and [here](https://arxiv.org/pdf/2406.14712).
+From there, the blog goes on to deliver popular summaries of two recent arXiv papers detailing our work developing the `granite-8b-qiskit` model, and the Qiskit HumanEval benchmarking method we use to evaluate the performance of quantum code generation tools. Interested readers can [explore the blog](https://www.ibm.com/quantum/blog/qiskit-code-assistant), and those looking for more technical detail can find the aforementioned arXiv papers [here](https://arxiv.org/abs/2405.19495/) and [here](https://arxiv.org/pdf/2406.14712).
 
 ## What's new in the documentation
 
