--- a/docs/guides/get-started-with-primitives.mdx
+++ b/docs/guides/get-started-with-primitives.mdx
@@ -169,7 +169,7 @@ result = job.result()
 
 # Get results for the first (and only) PUB
 pub_result = result[0]
-print(f"Counts for the meas output register: {pub_result.data.meas.get_counts()}")
+print(f"Counts for the meas output register: {pub_result.data.c.get_counts()}")
 ```
 Output
 ```text
