--- a/docs/open-source/best-practices.mdx
+++ b/docs/open-source/best-practices.mdx
@@ -39,10 +39,16 @@ Some key features are:
 
 * **GitHub actions**
 
-  This feature runs scripts when certain events happen in your GitHub repo. For
-  example, you can run your [test suite](#test-your-project) when you push new
-  code or automatically [publish your package](#package-your-project) when
-  you tag a commit.
+  This feature runs scripts in the cloud when certain events happen in your
+  GitHub repo. For example, you can run your [test suite](#test-your-project)
+  when you push new code or automatically [publish your
+  package](#package-your-project) when you tag a commit.
+
+  Use GitHub actions for [continuous
+  integration](https://www.atlassian.com/continuous-delivery/continuous-integration)
+  (CI) and [continuous
+  deployment](https://www.ibm.com/topics/continuous-deployment) (CD) of your
+  project.
 
 * **Security features**
 
