Add latest blog to latest updates page (#2099)
Closes #2098

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -5,7 +5,7 @@ description: The latest updates from Qiskit and IBM Quantum, including the lates
 
 # Latest updates
 
-*Last updated 18 September 2024*
+*Last updated 9 October 2024*
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
 Keep up with the latest and greatest from Qiskit and IBM Quantum&trade;! Gathered here are the the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
@@ -112,13 +112,13 @@ With the launch of the Qiskit Functions Catalog, Premium Plan developers will be
 
 Users can purchase licenses for the following functions contributed by our partners at Q-CTRL, QEDMA, Algorithmiq, and Qunasys.
 
-## Circuit functions
+### Circuit functions
 
 - Q-CTRL is releasing a circuit function that applies AI-driven quantum control techniques, with which users can scale successfully to larger problems.
 - Algorithmiq is releasing a circuit function that applies TEM (tensor-network error mitigation), an error mitigation method for obtaining estimators with fewer shots than the PEC (probabilistic error cancellation) method.
 - QEDMA is releasing a circuit function that uses proprietary protocols for efficient and accurate characterization of the noisy QPU operations, and applies error suppression and error mitigation based on the characterization data.
 
-## Application functions
+### Application functions
 
 - QunaSys is releasing a chemistry application function comprising three algorithms meant to solve the ground state energy estimation (GSEE) problem.
 - Q-CTRL is also releasing an optimization solver with which users can pass a graph or an objective, and receive solution costs.
@@ -126,35 +126,17 @@ Users can purchase licenses for the following functions contributed by our partn
 To get started, explore the [Qiskit Functions documentation](./functions).
 
 
-## IBM Quantum blog
+## IBM Quantum blog: A closer look at Qiskit Code Assistant
 
 *Browse all blogs at the [IBM Quantum blog page](https://www.ibm.com/quantum/blog).*
 
 {/* Bring over the Quantum news (blog) announcement post */}
 
-###  Qiskit: The most performant quantum software development kit
+We recently made Qiskit Code Assistant [available as a preview release](/announcements/product-updates/2024-09-16-code-assistant) for IBM Quantum Premium Plan users. In our latest post on the IBM Quantum blog, we take a look at the inner workings of the `granite-8b-qiskit` model behind this powerful new quantum code generation tool, and the unique challenges that went into building it.
 
-Using a new open-source suite of over 1,000 benchmarking tests developed by leading universities, national labs, and researchers at IBM, we found that Qiskit is second-to-none in terms of the speed and quality demonstrated for most test tasks.
+The blog opens with a high-level overview of our motivations for building Qiskit Code Assistant, long-term plans for open-sourcing the code assistant model, and instructions for getting started with Qiskit Code Assistant in popular coding environments VS Code and JupyterLab. A more detailed version of these instructions can be found in the [documentation](/guides/qiskit-code-assistant).
 
-When measured against the closest leading quantum software development kits, Qiskit showed its overall speed in both its ability to build and manipulate quantum circuits, as well its speed in synthesizing and transpiling them.
-
-In regards to quality, Qiskit transpiled circuits with the lowest number of 2Q gates — meaning it needs to perform far fewer operations when running circuits on hardware, thereby generating less noise and superior results.
-
-Finally, Qiskit was the only software that was able to complete all tests that can be completed using current quantum hardware. (Note: A small number of tests are currently impossible to complete with today's quantum processors.)
-
-We're also pleased to share that the benchmarking suite used for these tests, named Benchpress, is now available as [an open-source package](https://github.com/qiskit/benchpress). You can now use the Benchpress package to perform your own analysis of quantum SDK performance.
-
-Head to the [IBM Quantum blog](https://www.ibm.com/quantum/blog/qiskit-performance) for a deeper dive on the performance results!
-
-### Qiskit Serverless sets the stage for Qiskit Functions in the cloud
-
-[This week on the IBM Quantum blog](https://www.ibm.com/quantum/blog/qiskit-serverless), we're taking a fresh look at Qiskit Serverless, a programming model that empowers users to leverage both quantum and classical resources in a cloud environment. We've made a number of improvements to Qiskit Serverless since its debut at IBM Quantum Summit 2023, and have recently expanded and updated the [Qiskit Serverless documentation](/guides/serverless) to simplify the process of getting started with it.
-
-Qiskit Serverless is a useful tool for performing complex, long-running tasks, and for running workflows that are intended to be executed on a regular basis. You can scale quantum jobs by running them across multiple quantum and classical compute resources, meaning you can continue to efficiently execute your workflows even after you’ve hit the resource limits of the local machine you use for quantum experiments.
-
-In the blog, we take a closer look at how users can take advantage of these capabilities, explain how Qiskit Serverless actually works, and give readers an inside look at the improvements we’ve been making to it over the past several months.
-
-*On the IBM Quantum blog: [Qiskit Serverless sets the stage for Qiskit Functions in the cloud](https://www.ibm.com/quantum/blog/qiskit-serverless)*
+From there, the blog goes on to deliver popular summaries of two recent arXiv papers detailing our work developing the `granite-8b-qiskit` model, and the Qiskit HumanEval benchmarking method we use to evaluate the performance of quantum code generation tools. Interested readers can [explore the blog](https://www.ibm.com/quantum/blog/qiskit-code-assistant), and those looking for more technical detail can find the aforementioned arXiv papers [here](https://arxiv.org/abs/2405.19495/) and [here](https://arxiv.org/pdf/2406.14712).
 
 ## What's new in the documentation
 
