--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -25,20 +25,6 @@ The differences are summarized in the following table:
 | Batch mode   | Quantum computation only.               | The entire batch of jobs is scheduled together and there is no additional queuing time for each. Jobs in a batch are usually run close together.                                                                     |
 | Session mode | Both classical and quantum computation. | Dedicated and exclusive access to the QPU during the session active window, and no other users’ or QPU jobs can run. This is particularly useful for workloads that don’t have all inputs ready at the outset.  |
 
-<span id="best-practices"></span>
-## Best practices
-
-To ensure the most efficient use of the execution modes, the following practices are recommended:
-
-- Always close your session or batch, either by using a context manager or by specifying `session.close()` or `batch.close()`, respectively.
-- There is a fixed overhead associated with running a job. In general, if each of your jobs uses less than one minute of QPU time, consider combining several into one larger job (this applies to all execution modes). "QPU time" refers to time spent by the QPU complex to process your job.
-
-    A job's QPU time is listed in the **Usage** column on the IBM Quantum Platform [Workloads](https://quantum.ibm.com/workloads) page, or you can  query it by using  `qiskit-ibm-runtime` with this command `job.metrics()["usage"]["quantum_seconds"]`
-
-- If each of your jobs consumes more than one minute of QPU time, or if combining jobs is not practical, you can still run multiple jobs in parallel. Every job goes through both classical and quantum processing. While a QPU can process only one job at a time, up to five classical jobs can be processed in parallel. You can take advantage of this by submitting multiple jobs in [batch](run-jobs-batch#partition) or [session](run-jobs-session#two-vqe) execution mode.
-
-The above are general guidelines, and you should tune your workload to find the optimal ratio, especially when using sessions. For example, if you are using a session to get exclusive access to a backend, consider breaking up large jobs into smaller ones and running them in parallel. This might be more cost effective because it can reduce wall clock time.
-
 <span id="usage"></span>
 ## Sessions versus batch usage
 
@@ -55,7 +41,7 @@ If you are calling the REST API directly, the usage time is the `elapsed_time` v
 ![This image shows multiple sets of jobs.  One set is being run in session mode and the other is being run in batch mode.  For session mode, between each job is the interactive TTL (time to live).  The active window starts when the first job starts and ends after the last job is completed. After the final job of the first set of jobs completes, the active window ends and the session is paused (but not closed).  Another set of jobs then starts and jobs continue in a similar manner. The QPU is reserved for your use during the entire session.  For batch mode, the classical computation part of each job happens simultaneously, then all jobs are sent to the QPU.  The QPU is locked for your use from the time the first job reaches the QPU until the last job is done processing.  There is no gap between jobs where the QPU is idle.](/images/guides/execution-modes/SessionVsBatch.svg 'Sessions compared to batch')
 
 <span id="failed-job"></span>
-## Failed and canceled jobs
+### Failed and canceled jobs
 
 When a job is failed or canceled, the reported usage is as follows:
 
@@ -63,21 +49,24 @@ When a job is failed or canceled, the reported usage is as follows:
 
 * Session mode: the reported usage is the wall-clock time from the when the first job started executing in the session until the session terminates, regardless of the number of jobs that fail or are canceled.
 
-<span id="ittl-by-mode"></span>
-## Interactive time to live (ITTL)
+<span id="best-practices"></span>
+## Best practices
 
-The [ITTL](/guides/max-execution-time#session-maximum-execution-time) in batch mode is one second for all instances.
+To ensure the most efficient use of the execution modes, the following practices are recommended:
 
-The ITTL for a session (Premium Plan users only) is 60 seconds, unless there is an instance-specific configuration that dictates a different ITTL.
+- Always close your session or batch, either by using a context manager or by specifying `session.close()` or `batch.close()`, respectively.
+- There is a fixed overhead associated with running a job. In general, if each of your jobs uses less than one minute of QPU time, consider combining several into one larger job (this applies to all execution modes). "QPU time" refers to time spent by the QPU complex to process your job.
 
+    A job's QPU time is listed in the **Usage** column on the IBM Quantum Platform [Workloads](https://quantum.ibm.com/workloads) page, or you can  query it by using  `qiskit-ibm-runtime` with this command `job.metrics()["usage"]["quantum_seconds"]`
 
-| Execution mode | Instance type (Open or Premium Plan) | ITTL |
-| --- | --- | --- |
-| Batch mode | Both Open and Premium Plan | 1 sec |
-| Session mode | Premium Plan | 60 sec* |
+- If each of your jobs consumes more than one minute of QPU time, or if combining jobs is not practical, you can still run multiple jobs in parallel. Every job goes through both classical and quantum processing. While a QPU can process only one job at a time, up to five classical jobs can be processed in parallel. You can take advantage of this by submitting multiple jobs in [batch](run-jobs-batch#partition) or [session](run-jobs-session#two-vqe) execution mode.
 
-*\* Certain Premium Plan instances might be specially configured to have a different ITTL.*
+The above are general guidelines, and you should tune your workload to find the optimal ratio, especially when using sessions. For example, if you are using a session to get exclusive access to a backend, consider breaking up large jobs into smaller ones and running them in parallel. This might be more cost effective because it can reduce wall clock time.
 
-<Admonition type="note">
-You can also programmatically query the ITTL; see details on the [Maximum execution time](/guides/max-execution-time#session-maximum-execution-time) page.
+## Next steps
+
+<Admonition type="tip" title="Recommendations">
+    - Read the [introduction to sessions.](./sessions.mdx)
+    - [Run a job in batch mode.](./run-jobs-batch/)
+    - [Run a job in session mode.](./run-jobs-session)
 </Admonition>
