--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -63,14 +63,26 @@ with Session(backend=backend):
 <span id="specify-length"></span>
 ## Session length
 
-You can define the maximum session timeout with the `max_time` parameter. This should exceed the longest job's execution time and be within the QPU's limits. This timer starts when the session starts.  When the value is reached, the session is closed.  Any jobs that are running will finish, but jobs still queued are failed.
+The maximum session timeout determines how long a session a session can run.  You can set this value with the `max_time` parameter. This should exceed the longest job's execution time. The maximum (and default) value this can be for a session is 8 hours (28800 seconds), unless there is an instance-specific configuration that dictates a different maximum session timeout.  To determine a session's maximum timeout, follow the instructions in [Determine session details](#session-details) and look for the `max_time` value.
+
+This timer starts when the session starts.  When the value is reached, the session is closed.  Any jobs that are running will finish, but jobs still queued are failed.
 
 ``` python
 with Session(backend=backend, max_time="25m"):
   ...
 ```
 
-There is also an interactive time to live (ITTL) value that cannot be configured.  If no session jobs are queued within that window, the session is temporarily deactivated. To determine a session's ITTL, follow the instructions in [Determine session details](#session-details) and look for the `interactive_timeout` value.
+There is also an interactive time to live (ITTL) value that cannot be configured.  If no session jobs are queued within that window, the session is temporarily deactivated.  The ITTL for a session is 60 seconds, unless there is an instance-specific configuration that dictates a different ITTL. To determine a session's ITTL, follow the instructions in [Determine session details](#session-details) and look for the `interactive_timeout` value.
+
+| Instance type (Open or Premium Plan) | ITTL | Maximum timeout |
+| --- | --- | --- |
+| Premium Plan | 60 sec* | 8 h* |
+
+*\* Certain Premium Plan instances might be specially configured to have a different value.*
+
+<Admonition type="note">
+You can also programmatically query these values; see details on the [Maximum execution time](/guides/max-execution-time#session-maximum-execution-time) page.
+</Admonition>
 
 <span id="close"></span>
 ## Close a session
