--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -66,7 +66,7 @@ The above are general guidelines, and you should tune your workload to find the 
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Read the [introduction to sessions.](/guides/sessions.mdx)
+    - Read the [introduction to sessions.](/guides/sessions)
     - [Run a job in batch mode.](/guides/run-jobs-batch/)
     - [Run a job in session mode.](/guides/run-jobs-session)
 </Admonition>
