--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -67,11 +67,9 @@ with Batch(backend=backend, max_time="25m"):
 
 There is also an interactive time to live (ITTL) value that cannot be configured.  If no batch jobs are queued within that window, the batch is temporarily deactivated.
 
-| Instance type (Open or Premium Plan) | ITTL | Maximum timeout |
-| --- | --- | --- |
-| Both Open and Premium Plan | 1 sec | 10 min |
+To determine a batch's TTL or ITTL, follow the instructions in [Determine batch details](#batch-details) and look for the `max_time`or `interactive_timeout` value, respectively.
 
-*\* Certain Premium Plan instances might be specially configured to have a different value.*
+For more information about these settings, see [Batch maximum execution time.](/guides/max-execution-time#batch-max-time)
 
 <span id="close"></span>
 ## Close a batch
