--- a/docs/guides/max-execution-time.mdx
+++ b/docs/guides/max-execution-time.mdx
@@ -60,6 +60,14 @@ There is also an interactive time to live (ITTL) value that cannot be configured
 | Premium Plan | 60 sec* | 8 h* |
 | Open Plan | sessions not available | sessions not available |
 
+| ITTL | Maximum TTL |
+| --- |
+| 60 sec* | 8 h* |
+
+- ITTL: 60 sec
+- Maximum TTL: 8 hr
+
+
 *\* Certain Premium Plan instances might be configured to have a different value.*
 
 To determine the maximum TTL and ITTL values for a session programmatically, use the [`session.details()` method](run-jobs-session#session-details) and look for the `max_time` and  `interactive_timeout` values, respectively.
