update docs with max_execution_time option

--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -15,25 +15,54 @@
    "source": [
     "# Tensor-network error mitigation (TEM): A Qiskit Function by Algorithmiq\n",
     "\n",
-    "<Admonition type=\"note\">\n",
-    "Qiskit Functions are an experimental feature available only to IBM Quantum&trade; Premium Plan users. They are in preview release status and subject to change.\n",
-    "</Admonition>\n",
-    "\n",
     "## Overview\n",
     "\n",
-    "Algorithmiq’s Tensor-network Error Mitigation (TEM) method is a hybrid quantum-classical algorithm designed for performing noise mitigation entirely at the classical post-processing stage. With TEM, the user can compute the expectation values of observables mitigating the inevitable noise-induced errors that occur on quantum hardware with increased accuracy and cost efficiency, making it a highly attractive option for quantum researchers and industry practitioners alike. \n",
+    "Algorithmiq’s Tensor-network Error Mitigation (TEM) method is a hybrid\n",
+    "quantum-classical algorithm designed for performing noise mitigation entirely at\n",
+    "the classical post-processing stage. With TEM, the user can compute the\n",
+    "expectation values of observables mitigating the inevitable noise-induced errors\n",
+    "that occur on quantum hardware with increased accuracy and cost efficiency,\n",
+    "making it a highly attractive option for quantum researchers and industry\n",
+    "practitioners alike. \n",
     "\n",
-    "The method consists of constructing a tensor network representing the inverse of the global noise channel affecting the state of the quantum processor and then applying the map to informationally complete measurement outcomes acquired from the noisy state to obtain unbiased estimators for the observables. \n",
+    "The method consists of constructing a tensor network representing the inverse of\n",
+    "the global noise channel affecting the state of the quantum processor and then\n",
+    "applying the map to informationally complete measurement outcomes acquired from\n",
+    "the noisy state to obtain unbiased estimators for the observables. \n",
     "\n",
-    "As an advantage, TEM leverages informationally complete measurements to give access to a vast set of mitigated expectation values of observables and has optimal sampling overhead on the quantum hardware, as described in Filippov at al. (2023), [arXiv:2307.11740](https://arxiv.org/abs/2307.11740), and  Filippov at al. (2024), [arXiv:2403.13542](https://arxiv.org/abs/2403.13542). The measurement overhead refers to the number of additional measurements required to perform efficient error mitigation, a critical factor in the feasibility of quantum computations. Therefore, TEM has the potential to enable quantum advantage in complex scenarios, such as applications in the fields of quantum chaos, many-body physics, Hubbard dynamics, and small molecule chemistry simulations. \n",
+    "As an advantage, TEM leverages informationally complete measurements to give\n",
+    "access to a vast set of mitigated expectation values of observables and has\n",
+    "optimal sampling overhead on the quantum hardware, as described in Filippov at\n",
+    "al. (2023), [arXiv:2307.11740](https://arxiv.org/abs/2307.11740), and  Filippov\n",
+    "at al. (2024), [arXiv:2403.13542](https://arxiv.org/abs/2403.13542). The\n",
+    "measurement overhead refers to the number of additional measurements required to\n",
+    "perform efficient error mitigation, a critical factor in the feasibility of\n",
+    "quantum computations. Therefore, TEM has the potential to enable quantum\n",
+    "advantage in complex scenarios, such as applications in the fields of quantum\n",
+    "chaos, many-body physics, Hubbard dynamics, and small molecule chemistry\n",
+    "simulations. \n",
     "\n",
     "The main features and benefits of TEM can be summarized as:\n",
     "\n",
-    "1.  **Optimal measurement overhead**: TEM is optimal with respect to [theoretical bounds](https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.131.210601), meaning that no method can achieve a smaller measurement overhead. In other words, TEM requires the minimum number of additional measurements to perform error mitigation. This in turns means that TEM uses minimal quantum runtime.\n",
-    "2.  **Cost-effectiveness**: Since TEM handles noise mitigation entirely in the post-processing stage, there is no need to add extra circuits to the quantum computer, which not only makes the computational cheaper but also diminishes the risk of introducing additional errors due to the imperfections of quantum devices.\n",
-    "3.  **Estimation of multiple observables**: Thanks to informationally-complete measurements, TEM efficiently estimates multiple observables with the same measurement data from the quantum computer.\n",
-    "4.  **Measurement error mitigation**: The TEM Qiskit Function also includes a proprietary measurement error mitigation method able to significantly reduce readout errors after a short calibration run [arXiv:2409.02575](https://arxiv.org/abs/2409.02575).\n",
-    "5.  **Accuracy**: TEM significantly improves the accuracy and reliability of digital quantum simulations, making quantum algorithms more precise and dependable.\n"
+    "1.  **Optimal measurement overhead**: TEM is optimal with respect to\n",
+    "[theoretical bounds](https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.131.210601),\n",
+    "meaning that no method can achieve a smaller measurement overhead. In other\n",
+    "words, TEM requires the minimum number of additional measurements to perform\n",
+    "error mitigation. This in turns means that TEM uses minimal quantum runtime.\n",
+    "2.  **Cost-effectiveness**: Since TEM handles noise mitigation entirely in the\n",
+    "post-processing stage, there is no need to add extra circuits to the quantum\n",
+    "computer, which not only makes the computation cheaper but also diminishes the\n",
+    "risk of introducing additional errors due to the imperfections of quantum\n",
+    "devices.\n",
+    "3.  **Estimation of multiple observables**: Thanks to informationally-complete\n",
+    "measurements, TEM efficiently estimates multiple observables with the same\n",
+    "measurement data from the quantum computer.\n",
+    "4.  **Measurement error mitigation**: The TEM Qiskit Function also includes a\n",
+    "[proprietary measurement error mitigation method](https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.5.033154)\n",
+    "able to significantly reduce readout errors after a short calibration run.\n",
+    "5.  **Accuracy**: TEM significantly improves the accuracy and reliability of\n",
+    "digital quantum simulations, making quantum algorithms more precise and\n",
+    "dependable."
    ]
   },
   {
@@ -43,13 +72,30 @@
    "source": [
     "## Description\n",
     "\n",
-    "The TEM function allows you to obtain error-mitigated expectation values for multiple observables on a quantum circuit with minimal sampling overhead. The circuit is measured with an informationally complete positive operator-valued measure (IC-POVM), and the collected measurement outcomes are processed on a classical computer. This measurement is used to perform the tensor network methods and build a noise-inversion map. The function applies a map that fully inverts the whole noisy circuit using tensor networks to represent the noisy layers.\n",
+    "The TEM function allows you to obtain error-mitigated expectation values for\n",
+    "multiple observables on a quantum circuit with minimal sampling overhead. The\n",
+    "circuit is measured with an informationally complete positive operator-valued\n",
+    "measure (IC-POVM), and the collected measurement outcomes are processed on a\n",
+    "classical computer. This measurement is used to perform the tensor network\n",
+    "methods and build a noise-inversion map. The function applies a map that fully\n",
+    "inverts the whole noisy circuit using tensor networks to represent the noisy\n",
+    "layers.\n",
     "\n",
     "![TEM schematics](/images/guides/algorithmiq-tem/tem_scheme.svg \"Error-mitigated estimation of an observable O via post-processing measurement outcomes of the noisy quantum processor. U and N denote an ideal quantum operation and the associated noise map, which can be generally non-local (and extended to grey boxes). D stands for a tensor of operators that are dual to the effects in the IC measurement. The noise mitigation module M is a tensor network that is efficiently contracted from the middle out. The first iteration of the contraction is represented by the dotted purple line, the second one by the dashed line, and the third one by the solid line.\")\n",
     "\n",
-    "Once the circuits are submitted to the function, they are transpiled and optimized to minimize the number of layers with two-qubit gates (the noisier gates on quantum devices). The noise affecting the layers is learned through [Qiskit Runtime](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.noise_learner.NoiseLearner) using a sparse Pauli-Lindblad noise model as described in E. van den Berg, Z. Minev, A. Kandala, K. Temme, Nat. Phys. (2023). [arXiv:2201.09866](https://arxiv.org/abs/2201.09866).\n",
+    "Once the circuits are submitted to the function, they are transpiled and\n",
+    "optimized to minimize the number of layers with two-qubit gates (the noisier\n",
+    "gates on quantum devices). The noise affecting the layers is learned through\n",
+    "[Qiskit Runtime](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.noise_learner.NoiseLearner)\n",
+    "using a sparse Pauli-Lindblad noise model as described in E. van den Berg, Z.\n",
+    "Minev, A. Kandala, K. Temme, Nat. Phys. (2023).\n",
+    "[arXiv:2201.09866](https://arxiv.org/abs/2201.09866).\n",
     "\n",
-    "The noise model is an accurate description of the noise on the device able to capture subtle features, including qubit cross-talk. However, noise on the devices can fluctuate and drift and the learned noise might not be accurate at the point at which the estimation is done. This might result in inaccurate results. "
+    "The noise model is an accurate description of the noise on the device able to\n",
+    "capture subtle features, including qubit cross-talk. However, noise on the\n",
+    "devices can fluctuate and drift and the learned noise might not be accurate at\n",
+    "the point at which the estimation is done. This might result in inaccurate\n",
+    "results. "
    ]
   },
   {
@@ -59,7 +105,7 @@
    "source": [
     "## Get started\n",
     "\n",
-    "Authenticate using your [IBM Quantum Platform API token](http://quantum.ibm.com/), and select the TEM as follows:"
+    "Authenticate using your [IBM Quantum Platform API token](http://quantum.ibm.com/), and select the TEM function as follows:"
    ]
   },
   {
@@ -127,7 +173,7 @@
     "\n",
     "pub = (qc, [observable])\n",
     "options = {\n",
-    "    \"num_max_shots\": 100,\n",
+    "    \"max_execution_time\": 60,\n",
     "}\n",
     "job = tem.run(pubs=[pub], instance=instance, backend_name=backend_name, options=options)"
    ]
@@ -137,7 +183,7 @@
    "id": "6e2a97e2",
    "metadata": {},
    "source": [
-    "Use the Qiskit Serverless APIs to check your Qiskit Function workload's status:"
+    "You can use the familiar Qiskit Serverless APIs to check your Qiskit Function workload's status:"
    ]
   },
   {
@@ -155,7 +201,7 @@
    "id": "fbaeace8",
    "metadata": {},
    "source": [
-    "You can return the results as:"
+    "And you can return the results as:"
    ]
   },
   {
@@ -196,7 +242,7 @@
     "`options` | dict | Input options. See `Options` section for more details. | No | See `Options` section for more details.| \\{\"max_bond_dimension\": 100\\}\n",
     "\n",
     "\n",
-    "<Admonition type=\"caution\"> TEM does not currently support parametrized circuits. The `parameters` argument should be set to `None` if `precision` is specified.</Admonition>"
+    "<Admonition type=\"caution\"> TEM does not currently support parametrized circuit. The `parameters` argument should be set to `None` if `precision` is specified.</Admonition>"
    ]
   },
   {
@@ -213,7 +259,7 @@
     "-- | -- | -- | -- \n",
     "`max_bond_dimension` | int | The maximum bond dimension to be used for the tensor networks. | 500 | \n",
     "`tem_compression_cutoff` | float | The cutoff value to be used for the tensor networks. | 1e-16\n",
-    "`num_max_shots` | int | The maximum number of shots. | 100000\n",
+    "`max_execution_time` | int or `None` | The maximum execution time on the QPU in seconds. If the runtime exceeds this value, the job will be cancelled. If `None`, a default limit set by the IBM Runtime will apply. | `None`\n",
     "`num_randomizations` | int | The number of randomizations to be used for gate twirling. | 32\n",
     "`mitigate_readout_error` | bool | A Boolean flag indicating whether to perform readout error mitigation or not. | True\n",
     "`num_readout_calibration_shots` | int | The number of shots to be used for readout error mitigation. | 10000\n",
@@ -227,12 +273,12 @@
    "source": [
     "## Outputs\n",
     "\n",
-    "A Qiskit [PrimitiveResults](/api/qiskit/qiskit.primitives.PrimitiveResult) containing the TEM mitigated result. The result for each PUB is returned as a [PubResult](/api/qiskit/qiskit.primitives.PubResult) containing the following fields:\n",
+    "A Qiskit [PrimitiveResults](https://docs.quantum.ibm.com/api/qiskit/qiskit.primitives.PrimitiveResult) containing the TEM mitigated result. The result for each PUB is returned as a [PubResult](https://docs.quantum.ibm.com/api/qiskit/qiskit.primitives.PubResult) containing the following fields:\n",
     " \n",
     "\n",
     "Name |Type | Description\n",
     "-- | -- | --\n",
-    "data | DataBin | A Qiskit [DataBin](/api/qiskit/qiskit.primitives.DataBin) containing the TEM-mitigated observable and its standard error. The DataBin has the following fields: <ul><li>`evs`: The TEM-mitigated observable value.</li><li>`stds`: The standard error of the TEM-mitigated observable.</li></ul>\n",
+    "data | DataBin | A Qiskit [DataBin](https://docs.quantum.ibm.com/api/qiskit/qiskit.primitives.DataBin) containing the TEM mitigated observable and its standard error. The DataBin has the following fields: <ul><li>`evs`: The TEM mitigated observable value.</li><li>`stds`: The standard error of the TEM mitigated observable.</li></ul>\n",
     "metadadata | dict | A dictionary containing additional results. The dictionary contains the following keys: <ul><li>`\"evs_non_mitigated\"`: The observable value without error mitigation.</li><li>`\"stds_non_mitigated\"`: The standard error of the result without error mitigation.</li><li>`\"evs_mitigated_no_readout_mitigation\"`: The observable value with error mitigation but without readout error mitigation.</li><li>`\"stds_mitigated_no_readout_mitigation\"`: The standard error of the result with error mitigation but without readout error mitigation.</li><li>`\"evs_non_mitigated_with_readout_mitigation\"`: The observable value without error mitigation but with readout error mitigation.</li><li>`\"stds_non_mitigated_with_readout_mitigation\"`: The standard error of the result without error mitigation but with readout error mitigation.</li></ul>"
    ]
   },
@@ -243,7 +289,7 @@
    "source": [
     "## Fetching error messages\n",
     "\n",
-    "If your workload status is ERROR, use job.result() to fetch the error message as follows:"
+    "If your workload status is ERROR, use job.result() to fetch the error message to fetch the error message as follows:"
    ]
   },
   {
@@ -285,12 +331,6 @@
     "\n",
     "</Admonition>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "81d96082",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
